--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <div class="audio-player">
       <div class="mic-icon">🎙️</div>
       <audio controls>
+        <source src="joke.opus" type="audio/ogg">
         <source src="joke.mp3" type="audio/mpeg">
         Your browser doesn't support audio.
       </audio>
